manifests/bad-canary/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bad-canary
  name: bad-canary-preview
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: bad-canary
