manifests/bad-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bad-canary
  name: bad-canary-active
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: bad-canary
  type: ClusterIP
