manifests/bad-canary/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: bad-canary
  name: bad-canary-ingress-preview
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: bad-canary-preview
            port:
              number: 3000
        path: /bad-canary-preview
        pathType: ImplementationSpecific
